fixed issue where images were too large on mobile for account info page

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -38,7 +38,9 @@ h4 {
 
 .img {
   width: 100%;
-  height: 100%;
+  height: auto;
+  object-fit: contain;
+  max-width: 100px;
 }
 
 .notificationsBtn {
